--- a/Planet Homework/index.html
+++ b/Planet Homework/index.html
@@ -12,6 +12,7 @@
     <button class="button">Click Me</button>
     <table class="table"></table>
     <button class="buttonBot">Next 10 planets</button>
+    <button class="buttonsPrev">Previous 10 planets</button>
     <table class="tableTwo"></table>
     <script src="app.js"></script>
   </body>
