--- a/Weather app/index.html
+++ b/Weather app/index.html
@@ -11,7 +11,7 @@
     <header>
       <button class="homeBtn btns">Home</button>
       <button class="hourlyBtn btns">Hourly weather</button>
-      <button class="aboutBtn">About</button>
+      <button class="aboutBtn btns">About</button>
     </header>
     <main" class="contHolder">
       
