--- a/weather appppp/index.html
+++ b/weather appppp/index.html
@@ -8,12 +8,15 @@
     <title>Weather app</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <button class="homeBTn btns">Home</button>
       <button class="hourlyBTn btns">Hourly Weather</button>
       <button class="aboutBTn btns">About</button>
+      <button class="searchBtn btns">Search</button>
     </header>
-    <main>
+    <div class="result"></div>
+
+    <main class="mainPage">
       <div class="mainDiv"></div>
       <div class="cardHolder">
         <div class="cards"></div>
@@ -25,6 +28,58 @@
         <div class="cards"></div>
       </div>
     </main>
+    <section class="cardHHolder">
+      <div class="divHolder">
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+        <div class="cardH"></div>
+      </div>
+    </section>
 
     <script src="app.js"></script>
   </body>
